sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:18: error: not found: value sorted
          sorted=false
          ^AlgCocktailSort3:33: error: not found: value sorted
          sorted=false
          ^